--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3.5'
 
 services:
-  codenip-php81-symfony54:
-    container_name: codenip-php81-symfony54
+  php81-symfony54:
+    container_name: php81-symfony54
     build:
       context: ./docker
       args:
@@ -16,16 +16,16 @@ services:
     environment:
       XDEBUG_CLIENT_HOST: 172.17.0.1
       XDEBUG_CLIENT_PORT: 9003
-      PHP_IDE_CONFIG: serverName=codenip-php81-symfony54
+      PHP_IDE_CONFIG: serverName=php81-symfony54
     ports:
       - '1000:8000'
     networks:
-      - codenip-php81-symfony54-network
+      - php81-symfony54-network
     depends_on:
-      - codenip-php81-symfony54-postgres
+      - php81-symfony54-postgres
 
-  codenip-php81-symfony54-postgres:
-    container_name: codenip-php81-symfony54-postgres
+  php81-symfony54-postgres:
+    container_name: php81-symfony54-postgres
     image: postgres:14-alpine
     ports:
       - '5432:5432'
@@ -34,12 +34,12 @@ services:
       POSTGRES_PASSWORD: passwd
       POSTGRES_DB: postgres_symfony
     volumes:
-      - codenip-php81-symfony54-pgsql-data:/var/lib/postgresql/data
+      - php81-symfony54-pgsql-data:/var/lib/postgresql/data
     networks:
-      - codenip-php81-symfony54-network
+      - php81-symfony54-network
 
-  codenip-php81-symfony54-mysql:
-    container_name: codenip-php81-symfony54-mysql
+  php81-symfony54-mysql:
+    container_name: php81-symfony54-mysql
     image: mysql:8.0.26
     ports:
       - '3336:3306'
@@ -47,24 +47,24 @@ services:
       MYSQL_DATABASE: mysql_symfony
       MYSQL_ROOT_PASSWORD: root
     volumes:
-      - codenip-php81-symfony54-mysql-data:/var/lib/mysql
+      - php81-symfony54-mysql-data:/var/lib/mysql
     networks:
-      - codenip-php81-symfony54-network
+      - php81-symfony54-network
     command: [ 'mysqld', '--character-set-server=utf8mb4', '--collation-server=utf8mb4_unicode_ci' ]
 
-  codenip-php81-symfony54-rabbit:
-    container_name: codenip-php81-symfony54-rabbitmq
+  php81-symfony54-rabbit:
+    container_name: php81-symfony54-rabbitmq
     image: rabbitmq:3-management-alpine
     ports:
       - '5672:5672'
       - '15672:15672'
     networks:
-      - codenip-php81-symfony54-network
+      - php81-symfony54-network
 
 networks:
-  codenip-php81-symfony54-network:
+  php81-symfony54-network:
 
 volumes:
-  codenip-php81-symfony54-pgsql-data:
-  codenip-php81-symfony54-mysql-data:
+  php81-symfony54-pgsql-data:
+  php81-symfony54-mysql-data:
 
